[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc2023"
dynamic = ["version"]
description = 'Advent of Code 2023'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Tim Huddle" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pytest",
]

[project.urls]
Documentation = "https://github.com/kaiyote/aoc2023#readme"
Issues = "https://github.com/kaiyote/aoc2023/issues"
Source = "https://github.com/kaiyote/aoc2023"

[tool.hatch.version]
path = "src/aoc2023/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aoc2023 tests}"

[tool.coverage.run]
source_pkgs = ["aoc2023", "tests"]
branch = true
parallel = true
omit = [
  "src/aoc2023/__about__.py",
]

[tool.coverage.paths]
aoc2023 = ["src/aoc2023", "*/aoc2023/src/aoc2023"]
tests = ["tests", "*/aoc2023/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
